--- a/マークアップ言語/マークダウン記法.md
+++ b/マークアップ言語/マークダウン記法.md
@@ -1,5 +1,5 @@
-* [マークダウンとは](https://github.com/ren-github-account/Today-I-Learned/new/main#%E3%83%9E%E3%83%BC%E3%82%AF%E3%83%80%E3%82%A6%E3%83%B3%E3%81%A8%E3%81%AF)
-* [マークダウンと記法の具体例](https://github.com/ren-github-account/Today-I-Learned/new/main#%E3%83%9E%E3%83%BC%E3%82%AF%E3%83%80%E3%82%A6%E3%83%B3%E8%A8%98%E6%B3%95%E3%81%AE%E5%85%B7%E4%BD%93%E4%BE%8B)
+* [マークダウンとは](#マークダウンとは)
+* [マークダウンと記法の具体例](#マークダウン記法の具体例)
 
 ## マークダウンとは  
 HTMLなどのマークアップ言語を簡略化して、使いやすくしたもの。
