--- a/Java/クラス名.md
+++ b/Java/クラス名.md
@@ -1,2 +1,15 @@
 ### クラス名  
-Javaプログラムの書式に以下のようなものがある。
+Javaのプログラムを書く時は以下の書式に従う。 
+
+`class[クラス名]{}`
+
+上記のコードの[クラス名]の部分には、**「このプログラムがやりたいことの概要を表したもの」** を入れる。  
+※ただし、**頭文字は必ず大文字**を使う。  
+
+そして、この際のファイル名は必ず **「クラス名.java」** である必要がある。
+
+**例**
+
+`class HelloWorld{}`
+
+クラス名が上記の場合ファイル名は「HelloWorld.java」となる。
