--- a/Java/変数.md
+++ b/Java/変数.md
@@ -2,4 +2,17 @@
 変化し得る何らかの情報を入れるための「箱」。  
 
 変数には色々な「型」が存在するが、全部覚える必要はなく、  
-基本的な「型」をおさえたら、後は必要に応じて調べればok。
+基本的な「型」をおさえたら、後は必要に応じて調べればok。  
+
+### 宣言  
+変数を宣言するには、以下のように書く。 
+`<変数の型><変数名>;`  
+
+**宣言とは**  
+変数を使うには「これからこういう名前の変数を使うよ」と「宣言」する必要がある。  
+
+**例**
+
+`String greeting`  
+
+変数名のgreetingは、「あいさつ」という意味の英単語。
