--- a/Java/変数.md
+++ b/Java/変数.md
@@ -1,3 +1,8 @@
+**目次**
+* [変数の意味](#変数の意味)
+* [宣言](#宣言)
+* [ 宣言と代入を同時に行う](#宣言と代入を同時に行う)
+
 ### 変数の意味  
 変化し得る何らかの情報を入れるための「箱」。  
 
@@ -16,3 +21,13 @@
 `String greeting;`  
 
 変数名のgreetingは、「あいさつ」という意味の英単語。
+
+### 宣言と代入を同時に行う  
+
+`<変数の型><変数名> = <値>`
+
+**例**
+
+`String greeting = "こんにちわ"`
+
+
