--- a/Java/配列.md
+++ b/Java/配列.md
@@ -1,4 +1,17 @@
-### 配列  
+* [配列の意味](#配列の意味)
+* [宣言](#宣言)
+
+### 配列の意味 
 変数が「箱」だとすれば、**配列は「引き出し」のイメージ。**  
 
-配列を使うと、同じ変数名で複数の値を扱うことができる。
+配列を使うと、同じ変数名で複数の値を扱うことができる。  
+
+### 宣言  
+
+`配列の型 配列名[] = new 配列の型[配列の要素数];`
+
+例  
+`int prices[] = new int[3];`
+
+**上記のコードの意味**  
+整数型で3つの要素を持つ、「prices」という名前の配列。
