--- a/Java/配列.md
+++ b/Java/配列.md
@@ -15,3 +15,12 @@
 
 **上記のコードの意味**  
 整数型で3つの要素を持つ、「prices」という名前の配列。
+
+**値の代入**  
+値を代入する場合は以下のように記述。  
+
+`prices[0] = 1000;  
+prices[1] = 2000;
+ prices[2] = 3000;`
+
+ 配列の添え字は[0]から始まることに注意。
