--- a/Java/変数.md
+++ b/Java/変数.md
@@ -1,7 +1,8 @@
 **目次**
 * [変数の意味](#変数の意味)
 * [宣言](#宣言)
-* [ 宣言と代入を同時に行う](#宣言と代入を同時に行う)
+* [宣言と代入を同時に行う](#宣言と代入を同時に行う)
+* [番外編:文字列型から数値型への変換](#番外編:文字列型から数値型への変換)
 
 ### 変数の意味  
 変化し得る何らかの情報を入れるための「箱」。  
@@ -33,4 +34,13 @@
 
 `String greeting = "こんにちわ"`
 
+### 番外編:文字列型から数値型への変換  
 
+`Integer.parseInt(<文字列型の値や変数>)`  
+
+**例**  
+
+`String s = "200"; int num = Integer.parseInt(s);`  
+
+*説明*  
+String型の変数sに文字列「200」を代入し、それをint型の変数numに変換。
