--- a/Java/変数.md
+++ b/Java/変数.md
@@ -2,7 +2,7 @@
 * [変数の意味](#変数の意味)
 * [宣言](#宣言)
 * [宣言と代入を同時に行う](#宣言と代入を同時に行う)
-* [番外編:文字列型から数値型への変換](#番外編:文字列型から数値型への変換)
+* [番外編文字列型から数値型への変換](#番外編:文字列型から数値型への変換)
 
 ### 変数の意味  
 変化し得る何らかの情報を入れるための「箱」。  
