--- a/Java/クラス名.md
+++ b/Java/クラス名.md
@@ -1,3 +1,7 @@
+*目次*
+* [クラス名](#クラス名)
+* [publicを付ける、付けないの違い](#publicを付ける、付けないの違い)
+
 ### クラス名  
 Javaのプログラムを書く時は以下の書式に従う。 
 
@@ -13,3 +17,9 @@ Javaのプログラムを書く時は以下の書式に従う。
 `class HelloWorld{}`
 
 クラス名が上記の場合ファイル名は「HelloWorld.java」となる。
+
+### publicを付ける、付けないの違い
+結論から言うと、publicを付けたり、付けなかったりすることで**アクセス範囲をコントロールすることができる。**  
+public をつけるとどこからでもアクセスできる状態に。 逆に、private をつけるとそのクラスの中でしかアクセスできなくなる。
+
+技術書を読んでいて、サンプルコードのクラス名にpublicが付いている時とそうでない時があり、疑問に思っていた。
