--- a/Java/クラス名.md
+++ b/Java/クラス名.md
@@ -20,6 +20,6 @@ Javaのプログラムを書く時は以下の書式に従う。
 
 ### publicを付ける、付けないの違い
 結論から言うと、publicを付けたり、付けなかったりすることで**アクセス範囲をコントロールすることができる。**  
-public をつけるとどこからでもアクセスできる状態に。 逆に、private をつけるとそのクラスの中でしかアクセスできなくなる。
+public をつけるとどこからでもアクセスできる状態になる。
 
 技術書を読んでいて、サンプルコードのクラス名にpublicが付いている時とそうでない時があり、疑問に思っていた。
