--- a/Java/エラーメッセージ/シンボルを見つけられません.md
+++ b/Java/エラーメッセージ/シンボルを見つけられません.md
@@ -3,3 +3,6 @@ Integer.parseInt()のつづりを間違えていた。
 
 ### 対処
 (気づくまでにあれこれ試した末、やっと)つづりの間違えに気づき、正確なつづりを入力し直すことで解決。
+
+**追記**  
+変数の宣言を行わずに、代入をしていた時も同じエラーメッセージが表示された。
