--- a/Java/エラーメッセージ/変数は初期化されていない可能性があります.md
+++ b/Java/エラーメッセージ/変数は初期化されていない可能性があります.md
@@ -25,4 +25,4 @@
   変数resultを初期化することで解決。  
 
   ### なぜこのエラーは起きるのか  
-  基本的にコンパイルする時には **「変数に値が入らない場合があり得ると判断された時」** にこのエラーが起きるみたいだ。
+  基本的に、コンパイルする時に **「変数に値が入らない場合があり得ると判断された場合」** にこのエラーが起きるみたいだ。
