--- a/Java/コマンドライン引数.md
+++ b/Java/コマンドライン引数.md
@@ -10,3 +10,9 @@
 上記のように入力すると、Sampleという名前のプログラムは、1000と2500の値を受け取ることができる。  
 
 コマンドライン引数の値は、argsという配列に格納される。
+
+### 個数を表示する
+
+`System.out.println(args.length)`
+
+「args.length」を使うことでコマンドライン引数の個数を知ることができる。
