--- a/Java/ループ.md
+++ b/Java/ループ.md
@@ -1,3 +1,6 @@
+*目次*
+* [基本](#基本)
+* [for](#for)
 ### 基本
     while(ループを継続する条件){
         繰り返したい処理
@@ -7,3 +10,12 @@
 
 **補足**  
 ループでは習慣的に「i」という名前の変数を用いる。
+
+### for
+    for(初期化; 条件; カウントアップ;){
+    　　繰り返したい処理
+    }
+
+**whileとの使い分け**  
+繰り返す回数が決まっている場合はforの方が便利。  
+しかし、回数が決まっていない場合やわからない場合はwhileの方がスマートに書けることもある。
