--- a/Java/配列.md
+++ b/Java/配列.md
@@ -14,7 +14,7 @@
 `int prices[] = new int[3];`
 
 **上記のコードの意味**  
-整数型で3つの要素を持つ、「prices」という名前の配列。
+整数型で「prices」という名前の配列を新しく3つつくる。
 
 **値の代入**  
 値を代入する場合は以下のように記述。  
