--- a/Java/配列.md
+++ b/Java/配列.md
@@ -1,5 +1,6 @@
 * [配列の意味](#配列の意味)
 * [宣言](#宣言)
+* [宣言と代入を同時に行う](#宣言と代入を同時に行う)
 
 ### 配列の意味 
 変数が「箱」だとすれば、**配列は「引き出し」のイメージ。**  
@@ -24,3 +25,11 @@ prices[1] = 2000;
  prices[2] = 3000;`
 
  配列の添え字は[0]から始まることに注意。
+
+ ### 宣言と代入を同時に行う
+
+ `変数の型[] 変数名 = {値1,値2,値3…}`
+
+**具体例**
+
+`int[] prices = {1000,2000,3000};`
