--- a/Java/ループ.md
+++ b/Java/ループ.md
@@ -1,6 +1,7 @@
 *目次*
 * [基本](#基本)
 * [for](#for)
+* [指定した文字を横一列に表示](#指定した文字を横一列に表示)
 ### 基本
     while(ループを継続する条件){
         繰り返したい処理
@@ -19,3 +20,8 @@
 **whileとの使い分け**  
 繰り返す回数が決まっている場合はforの方が便利。  
 しかし、回数が決まっていない場合やわからない場合はwhileの方がスマートに書けることもある。
+
+### 指定した文字を横一列に表示
+
+「println」ではなく、「print」を使う。  
+「println(n)」は**nの出力後に改行する**という関数なので、横一列に表示させるには「ln」を外す必要がある。
