--- a/PHP/文字列のエスケープ.md
+++ b/PHP/文字列のエスケープ.md
@@ -1,3 +1,19 @@
 ### エスケープ処理とは
 
 エスケープ処理とは、通常の記法では出力できないような文字をどうにかして出力させる処理のこと。
+
+**具体例**
+
+例えば、ダッシュ記号の付いた文字を出力したいとする。今回出力したいのは「homura'」だ。  
+普通にコードを書くと以下になる。
+
+    <?php
+
+    echo '今日もhomura'は元気だ。';
+
+    ?>
+
+しかし、これはエラーとなる。
+では、どうすればよいのかというと、ここで登場するのがエスケープ処理だ。  
+以下のように、バックスラッシュ記号「\」を使って逃がしてあげると上手くいく。
+
