--- a/PHP/文字列のエスケープ.md
+++ b/PHP/文字列のエスケープ.md
@@ -17,3 +17,14 @@
 では、どうすればよいのかというと、ここで登場するのがエスケープ処理だ。  
 以下のように、バックスラッシュ記号「\」を使って逃がしてあげると上手くいく。
 
+    <?php
+
+    echo '今日もhomura\'は元気だ。';
+
+    ?>
+
+**実行結果**
+
+`今日もhomura'は元気だ。`
+
+ダッシュ記号付きの文字が出力できた。
