--- a/PHP/文字列のエスケープ.md
+++ b/PHP/文字列のエスケープ.md
@@ -33,4 +33,4 @@
 
 **注意点**
 
-シングルクォーテーション「'」で囲っていると、\nや\tはそのまま出力されてしまって反映されないので注意。
+echoの直後を、シングルクォーテーション「'」で囲っていると、\nや\tはそのまま出力されてしまって反映されないので注意。
