--- a/PHP/文字列リテラル.md
+++ b/PHP/文字列リテラル.md
@@ -10,4 +10,4 @@
     
     ?>
 
-上記のコード内で、「"」や「'」で囲われている文字列である「ほむら」や「こんにちわ。」などが文字列リテラルとなる。    
+上記のコード内で、「"」や「'」で囲われている文字列の「ほむら」や「こんにちわ。」などが文字列リテラルとなる。    
