--- a/PHP/文字列リテラル.md
+++ b/PHP/文字列リテラル.md
@@ -10,4 +10,9 @@
     
     ?>
 
-上記のコード内で、「"」や「'」で囲われている文字列の「ほむら」や「こんにちわ。」などが文字列リテラルとなる。    
+上記のコード内で、「"」や「'」で囲われている文字列の「ほむら」や「こんにちわ。」などが文字列リテラルとなる。
+
+### ヒアドキュメント
+
+「"」や「'」だと、上記の例にあげたような短い文章なら良いが、もっと複雑な長い文章となってくると、可読性が悪くなる。  
+そういう時は、ヒアドキュメントと呼ばれる文字列リテラルを使用すると良い。
