--- a/PHP/文字列リテラル.md
+++ b/PHP/文字列リテラル.md
@@ -16,3 +16,16 @@
 
 「"」や「'」だと、上記の例にあげたような短い文章なら良いが、もっと複雑な長い文章となってくると、可読性が悪くなる。  
 そういう時は、ヒアドキュメントと呼ばれる文字列リテラルを使用すると良い。
+
+**具体例**
+
+    <?php
+    $homura_wish = "「鹿目(かなめ)さんとの出会いをやり直したい。彼女に守られる私じゃなくて、彼女を守る私になりたい」";
+    $str = <<<EOD
+    ほむらが生み出したソウルジェムに込められた願い。それは
+    {$homura_wish}だった。
+    EOD;
+
+    echo $str
+
+    ?>
