--- a/PHP/文字列リテラル.md
+++ b/PHP/文字列リテラル.md
@@ -17,6 +17,18 @@
 「"」や「'」だと、上記の例にあげたような短い文章なら良いが、もっと複雑な長い文章となってくると、可読性が悪くなる。  
 そういう時は、ヒアドキュメントと呼ばれる文字列リテラルを使用すると良い。
 
+**基本**
+
+    >>>EOD
+    文字列1
+    文字列2
+    文字列3
+    EOD;
+
+EODの部分は好きな文字列に変更することができ、すべて小文字にしたり、アンダーバーを混ぜることもできる。  
+**※注意点**として、数字から開始することはできない。そのため「1EOD」のように文字列は使用不可。
+    
+
 **具体例**
 
     <?php
