--- a/PHP/文字列リテラル.md
+++ b/PHP/文字列リテラル.md
@@ -26,7 +26,7 @@
     EOD;
 
 EODの部分は好きな文字列に変更することができ、すべて小文字にしたり、アンダーバーを混ぜることもできる。  
-**※注意点**として、数字から開始することはできない。そのため「1EOD」のように文字列は使用不可。
+**※注意点**として、数字から開始することはできない。そのため「1EOD」のような文字列は使用不可。
     
 
 **具体例**
