--- a/PHP/文字列リテラル.md
+++ b/PHP/文字列リテラル.md
@@ -27,7 +27,12 @@
 
 EODの部分は好きな文字列に変更することができ、すべて小文字にしたり、アンダーバーを混ぜることもできる。  
 **※注意点**として、数字から開始することはできない。そのため「1EOD」のような文字列は使用不可。
-    
+
+|特徴|
+|---|
+|改行やスペースをそのまま反映させることができる|
+|echoを使って表示したり、変数に代入して使うことができる|
+|変数は展開される|
 
 **具体例**
 
