--- a/PHP/文字列リテラル.md
+++ b/PHP/文字列リテラル.md
@@ -14,7 +14,7 @@
 
 ### ヒアドキュメント
 
-「"」や「'」だと、上記の例にあげたような短い文章なら良いが、もっと複雑な長い文章となってくると、可読性が悪くなる。  
+「"」や「'」を使って出力させる方法は、上記の例にあげたような短い文章なら良いが、もっと複雑な長い文章となってくると、可読性が悪くなる。  
 そういう時は、ヒアドキュメントと呼ばれる文字列リテラルを使用すると良い。
 
 **基本**
