--- a/PHP/定数.md
+++ b/PHP/定数.md
@@ -12,3 +12,22 @@
     echo name;
 
     ?>
+    
+ **実行結果**
+
+ `Jack`
+
+ ### 注意点
+ 変数と同じように定数に別の値を上書きしようとするとエラーが出るので注意が必要。  
+ そのため、以下のコードはエラーとなる。
+
+    <?php
+
+    define("name","Jack");
+    name = "John";
+    echo name,PHP_EOL;
+
+    ?>
+
+
+ 
