--- a/PHP/定数.md
+++ b/PHP/定数.md
@@ -29,5 +29,22 @@
 
     ?>
 
+一方、変数の場合は以下のように後から値を書き換えることが可能だ。
 
- 
+　　　　<?php
+
+　　　　$a = 1;
+　　　　$a = 2;
+　　　　echo $a,PHP_EOL;
+　　　　$b = "TARO";
+　　　　$b = "John";
+　　　　echo $b;
+
+　　　　?>
+
+ 実行結果
+
+    2
+    John
+
+最初に代入した「1」と「TARO」が書き換わって出力することに成功している。
