--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -1,2 +1,17 @@
 ### 添字の別名
 添字は別名として「インデックス」や「キー」と呼ばれることもある。
+
+### 連想配列
+添字にテキストを使用した配列。
+
+「連想」という名前は、**添字がテキストになることで中の値が想像し易い**ことから来ている。
+
+    <?php
+
+    $a['name'] = 'Jack';
+    $a['age'] = 23;
+    $a['gender'] = 'Male'
+
+    echo $a['name'],$a['age'],$a['gender'];
+    
+    ?>
