--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -12,6 +12,13 @@
     $a['age'] = 23;
     $a['gender'] = 'Male'
 
-    echo $a['name'],$a['age'],$a['gender'];
+    echo $a['name'],PHP_EOL;
+    echo $a['age'],PHP_EOL;
+    echo $a['gender'];
     
     ?>
+
+実行結果
+    Jack
+    23
+    Male
