--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -10,7 +10,7 @@
 
     $a['name'] = 'Jack';
     $a['age'] = 23;
-    $a['gender'] = 'Male'
+    $a['gender'] = 'Male';
 
     echo $a['name'],PHP_EOL;
     echo $a['age'],PHP_EOL;
