--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -1,6 +1,7 @@
 *目次*
 * [添字の別名](#添字の別名)
 * [連想配列](#連想配列)
+* [多次元配列](#多次元配列)
 
 ### 添字の別名
 添字は別名として「インデックス」や「キー」と呼ばれることもある。
@@ -27,3 +28,24 @@
     Jack
     23
     Male
+
+### 多次元配列
+配列の中に配列を作ることを多次元配列という。
+
+    <?php
+
+    $item[0]["name"] = "ジーパン";
+    $item[0]["price"] = 2980;
+    $item[0]["size"] = "M";
+
+    $item[1]["name"] = "パーカー";
+    $item[1]["price"] = 5000;
+    $item[1]["size"] = "M";
+
+    $item[2]["name"] = "Tシャツ";
+    $item[2]["price"] = 1000;
+    $item[2]["size"] = "M";
+    
+    echo "合計金額:￥".$item[0]["price"] + $item[1]["price"] + $item[2]["price"];
+
+    ?>
