--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -2,6 +2,7 @@
 * [添字の別名](#添字の別名)
 * [連想配列](#連想配列)
 * [多次元配列](#多次元配列)
+* [スーパーグローバル](#スーパーグローバル)
 
 ### 添字の別名
 添字は別名として「インデックス」や「キー」と呼ばれることもある。
@@ -53,3 +54,21 @@
 
     #実行結果
     合計金額:￥8980
+
+### スーパーグローバル
+PHPが自動で用意してくれる配列のこと。
+
+代表的なものに、$_GET, $_POST, $_REQUESTなどがある。
+
+**前提知識**
+
+スーパーグローバルを理解するには、PHPの通信方式を知っておく必要がある。
+
+PHPの通信方式は大きく分けて2つある。
+
+「GET通信」と「POST通信」の2種類だ。
+
+|通信方式|特徴|
+|-|-|
+|GET通信|データをURLに含めて通信するため他の人からもデータを見ることができる。|
+|POST通信|通信データの本体にデータを組み込むため他の人からは見ることができない。|
