--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -58,7 +58,12 @@
 ### スーパーグローバル
 PHPが自動で用意してくれる配列のこと。
 
-代表的なものに、$_GET, $_POST, $_REQUESTなどがある。
+代表的なものに以下の3つがある。
+|種類|
+|-|
+|$_GET|
+|$_POST|
+|$_REQUEST|
 
 **前提知識**
 
