--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -77,3 +77,16 @@ PHPの通信方式は大きく分けて2つある。
 |-|-|
 |GET通信|データをURLに含めて通信するため他の人からもデータを見ることができる。|
 |POST通信|通信データの本体にデータを組み込むため他の人からは見ることができない。|
+
+### $_GET
+GET通信でデータが渡された時に自動で作られる配列。
+
+GET通信のパラメータは「?」からはじまり、データが複数ある場合は「&」で区切られる。
+
+**具体例**
+
+`https://ドメイン名.com/?page=5&category=drink&id=14`
+
+具体例のパラメータを読み解くと、5ページ目でカテゴリーが「ドリンク」そしてidが「14」となる。
+
+
