--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -3,7 +3,7 @@
 * [連想配列](#連想配列)
 * [多次元配列](#多次元配列)
 * [スーパーグローバル](#スーパーグローバル)
-* [$_GET](#$_GET)
+* [$_GET](#GET)
 
 ### 添字の別名
 添字は別名として「インデックス」や「キー」と呼ばれることもある。
@@ -79,7 +79,7 @@ PHPの通信方式は大きく分けて2つある。
 |GET通信|データをURLに含めて通信するため他の人からもデータを見ることができる。|
 |POST通信|通信データの本体にデータを組み込むため他の人からは見ることができない。|
 
-### $_GET
+### GET
 GET通信でデータが渡された時に自動で作られる配列。
 
 GET通信のパラメータは「?」からはじまり、データが複数ある場合は「&」で区切られる。
