--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -80,7 +80,7 @@ PHPの通信方式は大きく分けて2つある。
 |POST通信|通信データの本体にデータを組み込むため他の人からは見ることができない。|
 
 ### GET
-「$_GET」は、GET通信でデータが渡された時に自動で作られる配列。
+**「$_GET」** は、GET通信でデータが渡された時に自動で作られる配列。
 
 GET通信のパラメータは「?」からはじまり、データが複数ある場合は「&」で区切られる。
 
