--- a/PHP/配列.md
+++ b/PHP/配列.md
@@ -81,6 +81,7 @@ PHPの通信方式は大きく分けて2つある。
 |GET通信|データをURLに含めて通信するため他の人からもデータを見ることができる。|
 |POST通信|通信データの本体にデータを組み込むため他の人からは見ることができない。|
 
+ダンプカーのダンプもここから来ているのでは？と思って、ググったらあってた。面白い。
 ### GET
 **「$_GET」** は、GET通信でデータが渡された時に自動で作られる配列。
 
