--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -5,3 +5,5 @@
 |-|-|
 |クッキー|**クライアント側の端末**(パソコンやスマホ)。ブラウザ経由で保存される。|
 |セッション|**サーバー側**に保存される。|
+
+基本的にはセッションの使用がおすすめ。クッキーはクライアント側の端末に保存されるため、データを悪用されるのではないかというネガティブな印象をユーザーに与えてしまう可能性がある。
