--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -7,3 +7,7 @@
 |セッション|**サーバー側**に保存される。|
 
 基本的にはセッションの使用がおすすめ。クッキーはクライアント側の端末に保存されるため、データを悪用されるのではないかというネガティブな印象をユーザーに与えてしまう可能性がある。
+
+### クッキーの役割
+クッキーにログイン情報を保存すると、次回のアクセス時にログイン処理を省略することが可能になる。  
+自分の体験としては、ブラウザのCookieを削除した後に、Twitterにアクセスすると、もう一度ログイン情報の入力が必要になるのがよくある。
