--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -1,3 +1,11 @@
+### スーパーグローバルの仲間
+クッキーとセッションはスーパーグローバルの1種。他のスーパーグローバルとして、$_GETや$_POSTなどがある。
+
+|スーパーグローバルの仲間|
+|-|
+|クッキー|
+|セッション|
+
 ### クッキーとセッションの保存場所
 クッキーとセッションの保存場所には以下のような違いがある。
 
