--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -1,7 +1,7 @@
 ### スーパーグローバルの仲間
 クッキーとセッションはスーパーグローバルの1種。他のスーパーグローバルとして、$_GETや$_POSTなどがある。
 
-|スーパーグローバルの仲間|
+|スーパーグローバルに含まれる|
 |-|
 |クッキー|
 |セッション|
