--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -1,3 +1,10 @@
+*目次*
+* [スーパーグローバルの仲間](#スーパーグローバルの仲間)
+* [クッキーとセッションの保存場所](#クッキーとセッションの保存場所)
+* [クッキーの役割](#クッキーの役割)
+* [クッキーの生成](#クッキーの生成)
+
+
 ### スーパーグローバルの仲間
 クッキーとセッションはスーパーグローバルの1種。他のスーパーグローバルとして、$_GETや$_POSTなどがある。
 
@@ -20,3 +27,20 @@
 クッキーにログイン情報を保存すると、次回のアクセス時にログイン処理を省略することが可能になる。  
 
 自分の体験としては、ブラウザのCookieを削除した後に、Twitterにアクセスすると、もう一度ログイン情報の入力が必要になるのがよくある。
+
+### クッキーの生成
+
+    <?php
+
+    setcookie("UserName","Jack",time()60*5);
+
+    ?>
+
+クッキーを生成する時に渡す引数にはそれぞれ以下の意味がある。
+
+||setcookie関数の引数の意味|
+|-|-|
+|1つ目|生成するクッキーの名前|
+|2つ目|クッキーに設定する値|
+|3つ目|クッキーの保存時間|
+    
