--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -3,6 +3,7 @@
 * [クッキーとセッションの保存場所](#クッキーとセッションの保存場所)
 * [クッキーの役割](#クッキーの役割)
 * [クッキーの生成](#クッキーの生成)
+* [クッキーの削除](#クッキーの削除)
 
 
 ### スーパーグローバルの仲間
@@ -45,4 +46,8 @@
 |1つ目|生成するクッキーの名前|
 |2つ目|クッキーに設定する値|
 |3つ目|クッキーの保存時間|
-    
+
+### クッキーの削除
+クッキーを削除するには、クッキーの値に「null」を設定する。
+
+    `setcookie("UserName",null);`
