--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -4,6 +4,7 @@
 * [クッキーの役割](#クッキーの役割)
 * [クッキーの生成](#クッキーの生成)
 * [クッキーの削除](#クッキーの削除)
+* [セッションの役割](#セッションの役割)
 
 
 ### スーパーグローバルの仲間
@@ -51,3 +52,14 @@
 クッキーを削除するには、クッキーの値に「null」を設定する。
 
     setcookie("UserName",null);
+
+### セッションの役割
+クッキーについて見てきたが、**クッキーは大量のデータを一時的に保存するには向かない。**  
+
+そこで、クッキーの代わりにセッションの出番となる。
+
+セッションとは、「サーバーにデータを保存し、共有する仕組みのこと」。
+
+例えば、ショッピングサイトのカート機能にはこのセッションが使われている。
+
+このセッションのおかげで、商品のページを移動しても、カート内の情報が保持される。
