--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -58,8 +58,8 @@
 
 そこで、クッキーの代わりにセッションの出番となる。
 
-セッションとは、「サーバーにデータを保存し、共有する仕組みのこと」。
+セッションとは、**「サーバーにデータを保存し、共有する仕組みのこと」。**
 
 例えば、ショッピングサイトのカート機能にはこのセッションが使われている。
 
-このセッションのおかげで、商品のページを移動しても、カート内の情報が保持される。
+セッションがあるおかげで、商品のページを移動しても、カート内の情報が保持される。
