--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -5,6 +5,7 @@
 * [クッキーの生成](#クッキーの生成)
 * [クッキーの削除](#クッキーの削除)
 * [セッションの役割](#セッションの役割)
+* [セッションの生成](#セッションの生成)
 
 
 ### スーパーグローバルの仲間
@@ -63,3 +64,13 @@
 例えば、ショッピングサイトのカート機能にはこのセッションが使われている。
 
 セッションがあるおかげで、商品のページを移動しても、カート内の情報が保持される。
+
+### セッションの生成
+
+    <?php
+
+    session_start();
+    $_SESSION["UserName"] = "sato";
+    $_SESSION["Gender"] = "Male";
+
+    ?>
