--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -74,3 +74,6 @@
     $_SESSION["Gender"] = "Male";
 
     ?>
+
+セッションを生成するには、まずはじめにsession_start関数を実行する必要がある。  
+session_start関数は、**「これからセッションの使用を開始するよ」**という宣言になる。
