--- a/PHP/クッキーとセッション.md
+++ b/PHP/クッキーとセッション.md
@@ -6,6 +6,7 @@
 * [クッキーの削除](#クッキーの削除)
 * [セッションの役割](#セッションの役割)
 * [セッションの生成](#セッションの生成)
+* [セッションの削除](#セッションの削除)
 
 
 ### スーパーグローバルの仲間
@@ -77,3 +78,12 @@
 
 セッションを生成するには、まずはじめにsession_start関数を実行する必要がある。  
 session_start関数は、**「これからセッションの使用を開始するよ」** という宣言になる。
+
+### セッションの削除
+
+セッションを削除する方法は以下の2種類ある。
+
+|種類|方法|
+|-|-|
+|個別に削除|unset関数を使用する。|
+|一括削除|session_destroy関数を使用する。|
