--- a/PHP/サーバー情報の取得.md
+++ b/PHP/サーバー情報の取得.md
@@ -13,3 +13,12 @@
     ?>
 
 実行してみると、ページ全体に色々な情報がずらーーーっと表示される。
+
+だだ、デフォルトの状態だと、改行なしで表示されているため非常に見ずらい。  
+そこで、以下のようにHTMLの`<pre>タグ`で囲んであげることで改行されて表示される。
+
+    <pre><?php
+
+    var_dump($_SERVER);
+
+    ?></pre>
