--- a/PHP/サーバー情報の取得.md
+++ b/PHP/サーバー情報の取得.md
@@ -1,5 +1,6 @@
 *目次*
 * [サーバー情報を取得するには？](#サーバー情報を取得するには？)
+* [よく使われるもの](#よく使われるもの)
 
 ### サーバー情報を取得するには？
 スーパーグローバルの1つである、$_SERVERを使用することで、サーバー情報や実行時の環境情報を取得することができる。
@@ -22,3 +23,14 @@
     var_dump($_SERVER);
 
     ?></pre>
+
+### よく使われるもの
+
+$_SERVERを使って取得できる情報のうち、特に使用頻度の高いと思われるものをピックアップしてみる。
+
+|配列名|取得できる情報|
+|-|-|
+|$_SERVER[‘SERVER_SOFTWARE’]|実行しているWEBサーバーやPHPのバージョン。|
+|$_SERVER[‘DOCUMENT_ROOT’]|WEBサーバーの公開ディレクトリ。|
+|$_SERVER[‘HTTP_USER_AGENT’]|アクセスした端末のOSやブラウザ|
+
