--- a/PHP/サーバー情報の取得.md
+++ b/PHP/サーバー情報の取得.md
@@ -15,7 +15,7 @@
 
 実行してみると、ページ全体に色々な情報がずらーーーっと表示される。
 
-だだ、デフォルトの状態だと改行なしで表示されているため非常に見ずらい。  
+だだ、デフォルトの状態だと改行なしで表示されるため非常に見ずらい。  
 そこで以下のようにHTMLの`<pre>タグ`で囲んであげることで改行されて表示される。
 
     <pre><?php
