--- a/PHP/サーバー情報の取得.md
+++ b/PHP/サーバー情報の取得.md
@@ -32,5 +32,5 @@ $_SERVERを使って取得できる情報のうち、特に使用頻度の高い
 |-|-|
 |$_SERVER["SERVER_SOFTWARE"]|実行しているWEBサーバーやPHPのバージョン。|
 |$_SERVER["DOCUMENT_ROOT"]|WEBサーバーの公開ディレクトリ。|
-|$_SERVER["HTTP_USER_AGENT"]|アクセスした端末のOSやブラウザ|
+|$_SERVER["HTTP_USER_AGENT"]|アクセスした端末のOSやブラウザ。|
 
