--- a/PHP/サーバー情報の取得.md
+++ b/PHP/サーバー情報の取得.md
@@ -33,4 +33,10 @@ $_SERVERを使って取得できる情報のうち、特に使用頻度の高い
 |$_SERVER["SERVER_SOFTWARE"]|実行しているWEBサーバーやPHPのバージョン。|
 |$_SERVER["DOCUMENT_ROOT"]|WEBサーバーの公開ディレクトリ。|
 |$_SERVER["HTTP_USER_AGENT"]|アクセスした端末のOSやブラウザ。|
+|$_SERVER["REQUEST_URI"]|アクセスしてきたURL。|
+|$_SERVER["HTTP_HOST"]|ドメイン名。|
+
+ちなみに、レスポンシブデザインは3番目の`$_SERVER["HTTP_USER_AGENT"]`を使うことで実装できる。
+
+4番目の`$_SERVER["REQUEST_URI"]`はアクセスされたページの判定などに使える。
 
