--- a/マークアップ言語/マークダウン記法.md
+++ b/マークアップ言語/マークダウン記法.md
@@ -4,6 +4,7 @@
 * [改行](#改行)
 * [リスト](#リスト)
 * [リンク](#リンク)
+* [コードブロック](#コードブロック)
 
 ## マークダウンとは  
 HTMLなどのマークアップ言語を簡略化して、使いやすくしたもの。
@@ -22,4 +23,7 @@ hogeの部分は任意で変更して使う　
 
 *補足*  
 リンクはプレビューだとうまく動かないが、コミットすると動く
+
+### コードブロック
+3連続のバッククォート`"```"`で囲む。
 
