--- a/マークアップ言語/マークダウン記法.md
+++ b/マークアップ言語/マークダウン記法.md
@@ -25,5 +25,11 @@ hogeの部分は任意で変更して使う　
 リンクはプレビューだとうまく動かないが、コミットすると動く
 
 ### コードブロック
-3連続のバッククォート`"```"`で囲む。
+3連続のバッククォート`````で囲む。
+
+    ```
+    ここにソースコードを記述
+    ```
+
+半角スペースを四連続でもコードブロックが生成されるが、コピペする場合はバッククォートの方が便利。
 
