--- a/マークアップ言語/マークダウン記法.md
+++ b/マークアップ言語/マークダウン記法.md
@@ -31,5 +31,5 @@ hogeの部分は任意で変更して使う　
     ここにソースコードを記述
     ```
 
-半角スペースを四連続でもコードブロックが生成されるが、コピペする場合はバッククォートの方が便利。
+半角スペースの四連続でもコードブロックが生成されるが、コピペする場合はバッククォートの方が便利。
 
