--- a/PHP/関数を自分で作る.md
+++ b/PHP/関数を自分で作る.md
@@ -28,3 +28,9 @@ echo_message();
 **実行結果**
 
 `おはこんばんにちは`
+
+**説明**
+
+functionは「関数を定義します」という宣言。その後ろに半角スペースを空けて関数名を記述する。  
+
+関数の名前は基本的に小文字を使用し、複数の単語が続く場合はアンダーバーでつなぐ。
