--- a/PHP/関数を自分で作る.md
+++ b/PHP/関数を自分で作る.md
@@ -33,4 +33,4 @@ echo_message();
 
 functionは **「関数を定義します」** という宣言。その後ろに半角スペースを空けて関数名を記述する。  
 
-関数の名前は基本的に小文字を使用し、複数の単語が続く場合はアンダーバーでつなぐ。
+関数名は基本的に小文字を使用し、複数の単語が続く場合はアンダーバーでつなぐ。
