--- a/PHP/関数を自分で作る.md
+++ b/PHP/関数を自分で作る.md
@@ -1,6 +1,6 @@
 *目次*
 * [基本](#基本)
-* [](#)
+* [実用的な関数](#実用的な関数)
 
 ### 基本
 
@@ -34,3 +34,43 @@ echo_message();
 functionは **「関数を定義します」** という宣言。その後ろに半角スペースを空けて関数名を記述する。  
 
 関数名は基本的に小文字を使用し、複数の単語が続く場合はアンダーバーでつなぐ。
+
+### 実用的な関数
+
+基本で定義した関数は残念ながら実用的とはいいがたい。そこでもう少し実用的な関数を定義してみる。
+
+```
+<?php
+
+function add_numbers($num1,$num2)
+{
+  return $num1 + $num2;
+}
+
+$sum = add_numbers(99,99);
+echo "合計:".$sum;
+
+?>
+```
+
+**実行結果**
+
+`合計:198`
+
+**説明**
+
+引数に値を渡すと、その合計値を返してくれる関数だ。  
+
+`($num1,$num2)`と書くことで2つの引数を受け取ることを定義している。そして、returnで計算結果の値をadd_numbers()へ返している。
+
+returnで関数(今回の例だとadd_number())に返した値のことを、**「戻り値(返り値)」** と呼ぶ。
+
+**補足**
+
+ここでJavaなどの言語を学習したことがある人の中では疑問に思った人がいるかもしれない。
+
+上記のコードでは、functionで関数を定義する時、add_number($num1,$num2)のように事前に変数の宣言を行わずに、いきなり変数を関数の引数として設定している。  
+なぜこんなことが可能なのかというと、**PHPでは変数を事前に宣言する必要がない**ことが理由だ。  
+
+
+
