--- a/PHP/関数を自分で作る.md
+++ b/PHP/関数を自分で作る.md
@@ -61,7 +61,7 @@ echo "合計:".$sum;
 
 引数に値を渡すと、その合計値を返してくれる関数だ。  
 
-`($num1,$num2)`と書くことで2つの引数を受け取ることを定義している。そして、returnで計算結果の値をadd_numbers()へ返している。
+`($num1,$num2)`と書くことで2つの引数を受け取ることを定義している。そして、returnで計算結果の値を関数add_numbers()へ返している。
 
 returnで関数(今回の例だとadd_number())に返した値のことを、**「戻り値(返り値)」** と呼ぶ。
 
