--- a/PHP/関数を自分で作る.md
+++ b/PHP/関数を自分で作る.md
@@ -1,6 +1,7 @@
 *目次*
 * [基本](#基本)
 * [実用的な関数](#実用的な関数)
+* [外部ファイルを読み込む](#外部ファイルを読み込む)
 
 ### 基本
 
@@ -92,3 +93,29 @@ echo "合計:".$sum;
 ?>
 ```
 
+### 外部ファイルを読み込む
+
+自分で作った関数を外部ファイル化しておくと、他のコードからもファイルを読み込むことで関数が使えるようになる。
+
+外部ファイルを読み込むには、**require_once関数**を使用する。
+
+**具体例**
+
+先ほどのadd_number()の関数を定義したコードを「b_nandemo.php」というファイルに入れて、require_once関数を使って読み込んでいる。
+
+```
+<?php
+
+require_once("b_nandemo.php");
+
+$sum = add_numbers(111,111);
+echo "合計:".$sum;
+
+?>
+```
+
+**実行結果**
+
+`合計:222`
+
+引数をあれこれ変更してみても問題なく動作していることがわかる。
