--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -6,6 +6,6 @@
 **・ユーザーエージェント(UA)**
 
 ブラウザなどのソフトのこと。  
-ブラウザはHTMLを読みとって文書の構造を把握し、例えば「見出しは大きな文字で、重要なところは太字で」という具合に、読者に分かりやすい形で表示する。  
+ブラウザはHTMLを人間の代わりに読みとって、読者に分かりやすい形で表示する。  
 
 agentは「代理人」という意味。
