--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -1,5 +1,6 @@
 *目次*
 * [用語](#用語)
+* [HTMLの要素](#HTMLの要素)
 
 ### 用語
 
@@ -9,3 +10,12 @@
 ブラウザはHTMLを人間の代わりに読みとって、読者に分かりやすい形で表示する。  
 
 agentは「代理人」という意味。
+
+### HTMLの要素
+
+HTMLの要素は主に以下の2つがある。
+
+|種類|内容|
+|-|-|
+|head要素|そのHTMLファイル自身に関する情報|
+|body要素|読者に読んでもらう本文|
