--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -21,3 +21,5 @@ HTMLの要素は主に以下の2つがある。
 |body要素|読者に読んでもらう本文|
 
 そして、head要素とbody要素の2つを合わせたものを**HTML要素**という。
+
+HTMLではこのような **「要素」** を組み合わせることでページを作り上げていく。
