--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -1,6 +1,7 @@
 *目次*
 * [用語](#用語)
 * [HTMLの要素](#HTMLの要素)
+* [タグ](#タグ)
 
 ### 用語
 
@@ -23,3 +24,14 @@ HTMLの要素は主に以下の2つがある。
 そして、head要素とbody要素の2つを合わせたものを**HTML要素**という。
 
 HTMLではこのような **「要素」** を組み合わせることでページを作り上げていく。
+
+### タグ
+
+タグとマークアップという言葉には、それぞれ以下の意味がある。
+
+||意味|
+|-|-|
+|タグ|「ここからここまでがこの要素だ」という目印のこと。|
+|マークアップ|目印を付けていくこと。|
+
+HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来ている。
