--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -41,4 +41,15 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 
 ### HTMLの骨格
 
+```
+<html ...>
+  <head>
+    ヘッド要素の内容
+  </head>
+  <body>
+    ボディ要素の内容
+  </body>
+</html>
+```
+
 
