--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -13,6 +13,11 @@
 
 agentは「代理人」という意味。
 
+**・index.html**
+
+トップページのこと。  
+ブラウザは、たいてい「index」という名前のファイルを最初に表示するようになっている。
+
 ### HTMLの要素
 
 HTMLの要素は主に以下の2つがある。
