--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -51,7 +51,7 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 |-|-|
 |`<div align="center">　</div>`|囲んだ中身を中央に揃える。<div>自体は意味のあるタグではなく、中央寄せやCSSの効果範囲を指定するのに利用する。|
 |`<a href ="*"> </a>`|hrefで指定したページにリンクする。|
-|<hr width="*">|水平線を表示。width="数字"で長さを指定。|
+|`<hr width="*">`|水平線を表示。width="数字"で長さを指定。|
 
 ### HTMLの骨格
 
