--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -25,7 +25,7 @@ HTMLの要素は主に以下の2つがある。
 
 |種類|内容|
 |-|-|
-|head要素|HTML文書に関する情報|
+|head要素|ホームページの情報を書く|
 |body要素|本文|
 
 そして、head要素とbody要素の2つを合わせたものを**HTML要素**という。
