--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -49,7 +49,7 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 
 |タグ|説明|
 |-|-|
-|`<div align="center">　</div>`|囲んだ中身を中央に揃える。<div>自体は意味のあるタグではなく、中央寄せやCSSの効果範囲を指定するのに利用する。|
+|`<div align="center">　</div>`|囲んだ中身を中央に揃える。<div>自体は意味のあるタグではなく、中央寄せやCSSの効果範囲を指定するのに利用する。alignは「調節する」の意。|
 |`<a href ="*"> </a>`|hrefで指定したページにリンクする。|
 |`<hr width="*">`|水平線を表示。width="数字"で長さを指定。|
 
