--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -56,6 +56,7 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 |`<strong></strong>`|太字|
 |`<em></em>`|斜体。emは「強調」を意味するemphasisから来ている。|
 |`<img src = "*" alt = "*">`|画像を表示。altは画像が表示できない時などに表示される。altの中身には写真を見なくても写真の内容がわかる説明を書く。srcは「引用元」を意味するsourceから。|
+|`<footer></footer>`|フッターに書く情報をここに記述する。|
 
 ### HTMLの骨格
 
