--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -61,6 +61,7 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 ### HTMLの骨格
 
 ```
+<!DOCTYPE html>
 <html>
   <head>
     ヘッド要素の内容
@@ -71,4 +72,5 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 </html>
 ```
 
+`<!DOCTYPE html>`は基本的に決まり文句として先頭に書くのがよい。書かなかった場合は一部のブラウザでHTMLやCSSが意図したとおりに表示されない可能性がある。
 
