--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -1,8 +1,24 @@
 *目次*
 * [CSSとは](#CSSとは)
+* [要素](#要素)
 
 ### CSSとは
 
 Cascading Style Sheetsの略。Cascadeは「階段状に連続する滝」といった意味があり、転じてCascadingは **「連鎖的(段階的)に物事が生じる様子」** を表す。
 
 CSSには上流で適用されたスタイルを引き継ぎ、競合する場合は上書きしながら、**段階的**に設定していくという特徴がある。
+
+### 要素
+
+HTMLにて下記のようにタグで囲った場合を考える。
+
+`<p>こんにちわ</p>`
+
+このタグで囲まれたものをブラウザで表示する時、4つの領域が作られる。この4つの領域をまとめて **「要素」** と呼ぶ。
+
+|4つの要素|役割|
+|-|-|
+|contents|タグの中に記述された文章がそのまま表示される。上記の例で言うと「おはよう」が表示される領域のこと。|
+|border|コンテンツ領域の周りを線で囲う事ができる。|
+|padding|ボーダーとコンテンツの間にスペースを作る。|
+|margin|ボーダーの外側にスペースを作る事で他の要素との間隔を空ける事ができる。|
