--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -14,9 +14,9 @@ HTMLにて下記のようにタグで囲った場合を考える。
 
 `<p>こんにちわ</p>`
 
-このタグで囲まれたものをブラウザで表示する時、4つの領域が作られる。この4つの領域をまとめて **「要素」** と呼ぶ。
+このタグで囲まれたものをブラウザで表示する時、以下の4つの領域が作られる。この4つの領域をまとめて **「要素」** と呼ぶ。
 
-|4つの要素|役割|
+|要素|役割|
 |-|-|
 |contents|タグの中に記述された文章がそのまま表示される。上記の例で言うと「おはよう」が表示される領域のこと。|
 |border|コンテンツ領域の周りを線で囲う事ができる。|
