--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -20,5 +20,5 @@ HTMLにて下記のようにタグで囲った場合を考える。
 |-|-|
 |contents|タグの中に記述された文章がそのまま表示される。上記の例で言うと「おはよう」が表示される領域のこと。|
 |border|コンテンツ領域の周りを線で囲う事ができる。|
-|padding|ボーダーとコンテンツの間にスペースを作る。内側の話。一方マージンは外側の話。|
+|padding|ボーダーとコンテンツの間にスペースを作る。これは内側の話。一方マージンは外側の話。|
 |margin|ボーダーの外側にスペースを作る事で他の要素との間隔を空ける事ができる。|
