--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -1,6 +1,7 @@
 *目次*
 * [CSSとは](#CSSとは)
 * [要素](#要素)
+* [書く場所](#書く場所)
 
 ### CSSとは
 
@@ -22,3 +23,30 @@ HTMLにて下記のようにタグで囲った場合を考える。
 |border|コンテンツ領域の周りを線で囲う事ができる。|
 |padding|ボーダーとコンテンツの間にスペースを作る。これは内側の話。一方マージンは外側の話。|
 |margin|ボーダーの外側にスペースを作る事で他の要素との間隔を空ける事ができる。|
+
+### 書く場所
+
+CSSの書く場所は以下の2つ。
+
+**・HTMLの中に直接書く。**
+**・CSSファイルに書く。(こちらが一般的)**
+
+順番に見ていく。
+
+**・HTMLの中に直接書く。**
+
+下記のスタイルタグを使うことで、HTMLの中にCSSを書くことができる。
+
+`<style></style>`
+
+**・CSSファイルに書く。**
+
+HTMLファイルとCSSファイルを分ける方法には、以下の2つのメリットがある。
+
+**・編集がしやすくなる**
+**・CSSファイルを使いまわすことができる。一方HTML内の「style」タグの中に書く方法では、そのHTMLの中でしか利用できない。**
+
+
+
+
+
