--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -35,7 +35,7 @@ CSSの書く場所は以下の2つ。
 
 **・HTMLの中に直接書く。**
 
-下記のスタイルタグを使うことで、HTMLの中にCSSを書くことができる。
+下記のスタイルタグを使うことで、HTMLの中に直接CSSを書くことができる。
 
 `<style></style>`
 
@@ -44,7 +44,7 @@ CSSの書く場所は以下の2つ。
 HTMLファイルとCSSファイルを分ける方法には、以下の2つのメリットがある。
 
 **・編集がしやすくなる**  
-**・CSSファイルを使いまわすことができる。一方HTML内の「style」タグの中に書く方法では、そのHTMLの中でしか利用できない。**
+**・CSSファイルを再利用できる。一方HTML内の「style」タグの中に書く方法では、そのHTMLの中でしか利用できない。**
 
 
 
