--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -2,6 +2,7 @@
 * [CSSとは](#CSSとは)
 * [要素](#要素)
 * [書く場所](#書く場所)
+* [基本文法](#基本文法)
 
 ### CSSとは
 
@@ -46,6 +47,21 @@ HTMLファイルとCSSファイルを分ける方法には、以下の2つのメ
 
 **・編集がしやすくなる**  
 **・CSSファイルを再利用できる。一方HTML内の「style」タグの中に書く方法では、そのHTMLの中でしか利用できない。**
+
+### 基本文法
+```
+セレクタ {
+   プロパティ:値;
+}
+```
+
+**具体例**
+
+```
+p {
+ color:blue;
+}
+```
 
 
 
