--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -3,6 +3,7 @@
 * [要素](#要素)
 * [書く場所](#書く場所)
 * [基本文法](#基本文法)
+* [複数のセレクタを指定](#複数のセレクタを指定)
 
 ### CSSとは
 
@@ -62,6 +63,26 @@ p {
  color:blue;
 }
 ```
+
+**用語の意味**
+
+||意味|
+|-|-|
+|セレクタ|スタイルを適用させたい対象を指定。|
+|プロパティ|変更したいものを決める。例:color,background|
+|値|どのように変更するかを決める。例:blue,red|
+
+### 複数のセレクタを指定
+
+```
+h1,p {
+  color:blue;
+}
+```
+
+セレクタをカンマ「,」で区切ることで、上記のように「h1」と「p」の両方にスタイルを適用することができる。 
+
+
 
 
 
