--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -4,6 +4,7 @@
 * [書く場所](#書く場所)
 * [基本文法](#基本文法)
 * [複数のセレクタを指定](#複数のセレクタを指定)
+* [子要素にセレクタを指定する](#子要素にセレクタを指定する)
 
 ### CSSとは
 
@@ -81,6 +82,37 @@ h1,p {
 ```
 
 セレクタをカンマ「,」で区切ることで、上記のように「h1」と「p」の両方にスタイルを適用することができる。 
+
+### 子要素にセレクタを指定する
+
+HTMLでリストを表示する場合のように親要素と子要素がある時は、以下のように書くことで子要素にのみ装飾を反映させることができる。
+
+```
+ul li {
+color: blue;
+} 
+```
+
+**補足**
+
+念のため、HTMLのul要素の説明を書いておく。  
+ul要素を使ってリスト表示したいときは以下のように書く。
+
+```
+<ul>
+  <li>チンパンジー</li>
+  <li>ゴリラ</li>
+</ul>
+```
+
+<ul>
+  <li>チンパンジー</li>
+  <li>ゴリラ</li>
+</ul>
+
+ulはUnordered List(順番を考慮しないリスト)の略で、liはList Itemの略。
+
+
 
 
 
