--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -105,7 +105,7 @@ ul要素を使ってリスト表示したいときは以下のように書く。
 </ul>
 ```
 
-<ul style = "border:solid 6px #4bc7cf;">
+<ul style = "background:#4bc7cf;">
   <li>チンパンジー</li>
   <li>ゴリラ</li>
 </ul>
