--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -104,11 +104,17 @@ ul要素を使ってリスト表示したいときは以下のように書く。
   <li>ゴリラ</li>
 </ul>
 ```
-
-<ul style = "background:#4bc7cf;">
+<!DOCTYPE html>
+<html>
+  <head>
+  </head>
+  <body>
+    <ul style = "background:#4bc7cf;">
   <li>チンパンジー</li>
   <li>ゴリラ</li>
-</ul>
+   </ul>
+  </body>
+</html>
 
 ulはUnordered List(順番を考慮しないリスト)の略で、liはList Itemの略。
 
