--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -2,6 +2,7 @@
 * [CSSとは](#CSSとは)
 * [要素](#要素)
 * [書く場所](#書く場所)
+* [CSSファイルの作成手順](#CSSファイルの作成手順)
 * [基本文法](#基本文法)
 * [複数のセレクタを指定](#複数のセレクタを指定)
 * [子要素にセレクタを指定する](#子要素にセレクタを指定する)
@@ -49,6 +50,22 @@ HTMLファイルとCSSファイルを分ける方法には、以下の2つのメ
 
 **・編集がしやすくなる**  
 **・CSSファイルを再利用できる。一方HTML内の「style」タグの中に書く方法では、そのHTMLの中でしか利用できない。**
+
+### CSSファイルの作成手順
+
+||手順|
+|-|-|
+|①|編集中のHTMLファイルと同じ階層にCSSファイルを置く。|
+|②|linkタグを使用し、CSSファイルを読み込む設定を行う。|
+
+**linkタグの書き方**
+
+```
+<link rel="stylesheet" href="ファイル名.css">
+```
+
+ relは「relation（関係）」の略で、rel=""の部分には「ファイルとの関係性」を書く。  
+ hrefはhypertext referenceの略。referenceは「参照」の意。
 
 ### 基本文法
 ```
