--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -60,6 +60,8 @@ HTMLファイルとCSSファイルを分ける方法には、以下の2つのメ
 
 **linkタグの書き方**
 
+linkタグはhead内に書き、以下のように書く。
+
 ```
 <link rel="stylesheet" href="ファイル名.css">
 ```
