--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -1,6 +1,7 @@
 *目次*
 * [用語](#用語)
 * [HTMLの要素](#HTMLの要素)
+* [属性](#属性)
 * [タグ](#タグ)
 * [よく使うタグ一覧](#よく使うタグ一覧)
 * [HTMLの骨格](#HTMLの骨格)
@@ -35,6 +36,20 @@ HTMLの要素は主に以下の2つがある。
 そして、head要素とbody要素の2つを合わせたものを**HTML要素**という。
 
 HTMLではこのような **「要素」** を組み合わせることでページを作り上げていく。
+
+### 属性
+
+属性とは、「要素」に情報を加えるもの。
+
+**具体例**
+
+```
+<p class="paon">
+ゾウさんだよ
+</p> 
+```
+
+上記の例では、pタグにclass属性を付与し、"paon"という名前を付けている。
 
 ### タグ
 
