--- a/マークアップ言語/HTML/基本.md
+++ b/マークアップ言語/HTML/基本.md
@@ -91,6 +91,6 @@ HTMLの正式名称であるHypertext Markup LanguageのMarkupはここから来
 </html>
 ```
 
-`<!DOCTYPE html>`は基本的に決まり文句として先頭に書くのがよい。書かなかった場合は一部のブラウザでHTMLやCSSが意図したとおりに表示されない可能性がある。  
+`<!DOCTYPE html>`のことをドキュメントタイプ宣言といい、基本的に決まり文句として先頭に記述する。もし書かなかった場合は一部のブラウザでHTMLやCSSが意図したとおりに表示されない可能性がある。  
 
 
