--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -6,6 +6,7 @@
 * [基本文法](#基本文法)
 * [複数のセレクタを指定](#複数のセレクタを指定)
 * [子要素にセレクタを指定する](#子要素にセレクタを指定する)
+* [クラス](#クラス)
 
 ### CSSとは
 
@@ -126,6 +127,19 @@ ul要素を使ってリスト表示したいときは以下のように書く。
 
 ulはUnordered List(順番を考慮しないリスト)の略で、liはList Itemの略。
 
+### クラス
+
+クラスを使うことで要素に名前を付けることができる。
+
+**具体例**
+
+```
+<p class="paon">
+ゾウさんだよ
+</p> 
+```
+
+上記の例では、p要素に"paon"という名前を付けた。
 
 
 
