--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -141,6 +141,18 @@ ulはUnordered List(順番を考慮しないリスト)の略で、liはList Item
 
 上記の例では、p要素に"paon"という名前を付けた。
 
+**注意点**
+
+CSSで装飾を加える時は、必ず先頭に「.」を付けることに注意する。
+
+**具体例**
+
+```
+.paon {
+color: blue;
+} 
+```
+
 
 
 
