--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -7,6 +7,7 @@
 * [複数のセレクタを指定](#複数のセレクタを指定)
 * [子要素にセレクタを指定する](#子要素にセレクタを指定する)
 * [クラス](#クラス)
+* [ID](#ID)
 
 ### CSSとは
 
@@ -153,6 +154,25 @@ color: blue;
 } 
 ```
 
+### ID
+
+クラスと似たものにIDがある。
+
+IDも要素に名前を付けることができる。
+
+**具体例**
+
+```
+<p id="zero">
+俺の名はゼロ
+</p> 
+```
+
+```
+.zero {
+   color:red;
+}
+```
 
 
 
