--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -8,6 +8,7 @@
 * [子要素にセレクタを指定する](#子要素にセレクタを指定する)
 * [クラス](#クラス)
 * [ID](#ID)
+* [クラスとIDの違い](#クラスとIDの違い)
 
 ### CSSとは
 
@@ -169,9 +170,43 @@ IDも要素に名前を付けることができる。
 ```
 
 ```
-.zero {
+#zero {
    color:red;
 }
+```
+
+**注意点**
+
+CSSを書く時は先頭に「#」を付けることに注意する。
+
+### クラスとIDの違い
+
+同じ名前が使える回数が異なる。
+
+クラスとIDはどちらも名前を付けるという機能は同じだが、クラスは同じ名前を繰り返し使えるのに対し、IDは同じ名前を使うことができないという違いがある。
+
+**具体例**
+
+クラスは下記のように、同じ名前を繰り返し使うことができる。
+
+```
+<p class="paon">
+ゾウさんだよ
+</p>
+
+<p class="paon">
+ククク…これが世界の選択か
+</p>
+```
+
+そして、CSSスタイルは共有することができる。
+
+例えば、以下のCSSが書かれていた場合、上記のp要素の中身はどちらも青色になる。
+
+```
+.paon {
+color: blue;
+} 
 ```
 
 
