--- a/マークアップ言語/CSS/基本.md
+++ b/マークアップ言語/CSS/基本.md
@@ -202,7 +202,7 @@ CSSを書く時は先頭に「#」を付けることに注意する。
 
 そして、CSSスタイルは共有することができる。
 
-例えば、以下のCSSが書かれていた場合、上記のp要素の中身はどちらも青色になる。
+例えば、以下のCSSが書かれていた場合、上記のp要素の中身はどちらも青色となる。
 
 ```
 .paon {
