--- a/JavaScript/基本.md
+++ b/JavaScript/基本.md
@@ -1,3 +1,18 @@
 ### どんな言語？
 
 JavaScriptを使うことでHTMLをいろいろと操作することができる。
+
+### 書き方
+
+以下の2つの書き方がある。
+* HTML内に直接記述
+* 外部ファイルにして読み込む
+
+**HTML内に直接記述**
+
+HTML内に書く時は、scriptタグで囲んで記述する。
+
+**具体例**
+
+```
+```
