--- a/JavaScript/基本.md
+++ b/JavaScript/基本.md
@@ -15,4 +15,14 @@ HTML内に書く時は、scriptタグで囲んで記述する。
 **具体例**
 
 ```
+<!DOCTYPE html>
+<head>
+    <title>HTML内にJavaScriptを書く</title>
+</head>
+<body>
+<script>
+    document.write('Hello!');
+</script>
+</body>
+</html>
 ```
