--- a/JavaScript/基本.md
+++ b/JavaScript/基本.md
@@ -26,3 +26,24 @@ HTML内に書く時は、scriptタグで囲んで記述する。
 </body>
 </html>
 ```
+
+**実行結果**
+`Hello!`
+
+**外部ファイルにして読み込む**
+
+`index.html`ファイルと同じ階層にjsファイルを設置するか、絶対パスを指定する必要がある。
+
+jsファイルの用意ができたら、HTML内に以下のコードを記述して読み込む。
+
+```
+<script src="ファイル名.js"></script>
+```
+
+**注意点**
+
+読み込むjsファイル内で、scriptタグを使わないように注意! 読み込むjsファイル内にscriptタグがあるとエラーを吐いて実行されない。
+
+**補足**
+
+JavaScriptのエラーメッセージを確認するには、ブラウザのデベロッパーツールのコンソールをチェックするとよい。
