--- a/マークアップ言語/HTML/セクション.md
+++ b/マークアップ言語/HTML/セクション.md
@@ -3,3 +3,18 @@
 文章のまとまった範囲のこと。
 
 見出しから始まり、その見出しの適用される範囲が一つのセクションということになる。
+
+### sectionタグ
+
+セクションを示すにはsectionタグを使う。
+
+**具体例**
+
+```
+<section>
+  <h2>見出し</h2>
+  <p>テキスト</p>
+</section>
+```
+
+上記の例の場合のように、「見出しとその内容」という形式が出てきた時にsectionタグを使用する。
