--- a/JavaScript/基本.md
+++ b/JavaScript/基本.md
@@ -63,12 +63,16 @@ JavaScriptで文字列を囲むとき、「'」を使ったほうがいいのか
 
 ### DOMとは
 
-ブラウザはHTMLやCSS、JavaScriptを読み込んでwebページを表示するが、この表示する流れの中で、HTMLはDOMというデータ構造に変換される。
+ブラウザはHTMLやCSS、JavaScriptを読み込んでwebページを表示するが、この表示する流れの中で、**HTMLはDOMというデータ構造に変換される。**
 
 DOMはDocument Object Modelの略。
 
 JavaScriptを使うと、ブラウザ内部にあるDOM にアクセスして、その内容を書き換えることができる。  
 そして、DOM が書き換えられると、自動的に画面の内容が新たな DOM に合わせて再描画される仕組みになっている。
+
+**まとめ**
+* Webページが画面に表示される前に、HTMLはDOM(データ構造)に変換される。
+* JavaScriptからDOMを操作することができ、webページの表示を変えたりできる。
 
 
 
