--- a/JavaScript/基本.md
+++ b/JavaScript/基本.md
@@ -3,6 +3,7 @@
 * [書き方](#書き方)
 * [クォーテーションの区別について](#シングルクォーテーションとダブルクォーテーションどっち？)
 * [DOMとは](#DOMとは)
+* [ノード](#ノード)
 
 ### どんな言語？
 
@@ -73,6 +74,19 @@ JavaScriptを使うと、ブラウザ内部にあるDOM にアクセスして、
 **まとめ**
 * Webページが画面に表示される前に、HTMLはDOM(データ構造)に変換される。
 * JavaScriptからDOMを操作することができ、webページの表示を変えたりできる。
+
+### ノード
+
+DOMはツリー構造をとっており、ツリーを構成する一つ一つの部品のことを**ノード**と呼ぶ。
+
+ノードにはいくつか種類があるが、以下の2つをおさえておけばよい。
+
+||意味|
+|-|-|
+|要素ノード|HTML要素を表す。例:head、body、h1など|
+|テキストノード|テキストのこと。例:"こんにちわ"|
+
+
 
 
 
