--- a/JavaScript/基本.md
+++ b/JavaScript/基本.md
@@ -79,7 +79,7 @@ JavaScriptを使うと、ブラウザ内部にあるDOM にアクセスして、
 
 DOMはツリー構造をとっており、ツリーを構成する一つ一つの部品のことを**ノード**と呼ぶ。
 
-ノードにはいくつか種類があるが、以下の2つをおさえておけばよい。
+ノードにはいくつか種類があるが、主に以下の2つをおさえておけばよい。
 
 ||意味|
 |-|-|
