--- a/JavaScript/デバッグ.md
+++ b/JavaScript/デバッグ.md
@@ -10,7 +10,7 @@
 |①|問題がありそうな部分をコメントで囲み、 プログラム部分から除外してみる。|
 |②|他の部分が動作したら、コメントで囲った部分のどこかに問題があると言うことが分かる。|
 
-あとは、手順の①の範囲を狭めていくと問題個所を特定することができる。
+あとは、手順①の範囲を狭めていくと問題個所を特定することができる。
 
 **具体例**
 
