--- a/JavaScript/デバッグ.md
+++ b/JavaScript/デバッグ.md
@@ -1,5 +1,6 @@
 *目次*
 * [コメントを使う](#コメントを使う)
+* [アラートを使う](#アラートを使う)
 
 ### コメントを使う
 
@@ -38,3 +39,6 @@ dom.innerHTML = str;
 */
 ```
 
+### アラートを使う
+
+alertを使って変数の中身を表示させることができ、デバッグに使える。
