--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -1,5 +1,6 @@
 *目次*
 * [alert](#alert)
+* [document.write](#document.write)
 
 ### alert
 
@@ -7,10 +8,16 @@
 alert(*);
 ```
 
-alertを使うことで画面に文字列や数値を表示させることができる。
+alertを使うことで画面に文字列や数値をポップアップで表示させることができる。
 
 使い方のルール
 * 文字列はクォーテーションで囲むが、数値にクォーテーションは不要。
 * 文字列や数値をつなげる時は`+`記号を使用。
 * `\n`で改行できる。
 
+### document.write
+
+```
+document.write(*)
+```
+document.write()を使ってもalertと同じように文章などを表示させることができる。こちらはポップアップ表示ではない。
