--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -18,6 +18,6 @@ alertを使うことで画面に文字列や数値をポップアップで表示
 ### document.write
 
 ```
-document.write(*)
+document.write(*);
 ```
 document.write()を使ってもalertと同じように文章などを表示させることができる。こちらはポップアップ表示ではない。
