--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -15,9 +15,22 @@ alertを使うことで画面に文字列や数値をポップアップで表示
 * 文字列や数値をつなげる時は`+`記号を使用。
 * `\n`で改行できる。
 
+**具体例**
+
+```
+alert( "円周率は\n" + 3.14159 );  //文字列を改行させる
+```
+
 ### document.write
 
 ```
 document.write(*);
 ```
 document.write()を使ってもalertと同じように文章などを表示させることができる。こちらはポップアップ表示ではない。
+
+`\n`では改行できなかったけど、以下のように`<br>`を使うことで改行できた。
+
+```
+document.write("<strong>10+20</strong>の計算結果は…<br>");
+```
+
