--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -49,5 +49,16 @@ var 変数 = 値;
 2行目は、複数の変数をコンマで区切って一括で宣言。
 3行目は、変数を宣言すると同時に、変数に値を代入している。
 
+**補足**
+
+文字列と数字を「+」で繋げると、数字は文字として扱われる。
+
+```
+var num1 = 1;
+var num2 = 2;
+
+document.write("計算結果:" + num1 + num2);
+```
+
 
 
