--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -2,6 +2,7 @@
 * [alert](#alert)
 * [document.write](#document.write)
 * [変数の宣言](#変数の宣言)
+* [定数](#定数)
 
 ### alert
 
@@ -59,6 +60,16 @@ var num1 = 1;
 var num2 = 2;
 
 document.write("計算結果:" + num1 + num2);
+```
+
+### 定数
+
+定数の宣言には`const`を使用する。
+
+```
+const TEISU = 1;
+
+document.write( TEISU+"<br>" ); 
 ```
 
 
