--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -50,7 +50,7 @@ var 変数 = 値;
 2行目は、複数の変数をコンマで区切って一括で宣言。
 3行目は、変数を宣言すると同時に、変数に値を代入している。
 
-**補足**
+**補足その1**
 
 文字列と数字を「+」で繋げると、数字は文字として扱われる。
 
@@ -61,6 +61,10 @@ var num2 = 2;
 
 document.write("計算結果:" + num1 + num2);
 ```
+
+**補足その2**
+
+関数の中で宣言した変数は、その関数の中でしか使うことができない。これを**ローカル変数**と呼ぶ。
 
 ### 定数
 
