--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -3,6 +3,7 @@
 * [document.write](#document.write)
 * [変数の宣言](#変数の宣言)
 * [定数](#定数)
+* [関数](#関数)
 
 ### alert
 
@@ -74,6 +75,14 @@ document.write("計算結果:" + num1 + num2);
 const TEISU = 1;
 
 document.write( TEISU+"<br>" ); 
+```
+
+### 関数
+
+```
+function 関数名(引数) {
+ 実行したい処理
+}
 ```
 
 
