--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -87,5 +87,15 @@ function 関数名(引数) {
 
 引数の部分は使わない時は空のままでok。
 
+**具体例**
+
+```
+function fncCall()
+{
+  var message = "関数が呼び出されました！";
+  alert(message);
+}
+```
+
 
 
