--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -4,6 +4,7 @@
 * [変数の宣言](#変数の宣言)
 * [定数](#定数)
 * [関数](#関数)
+* [if文](#if文)
 
 ### alert
 
@@ -95,6 +96,23 @@ function fncCall()
   var message = "関数が呼び出されました！";
   alert(message);
 }
+```
+
+### if文
+
+**具体例**
+
+```
+var num1 = 10; //ここの変数に代入する値を変更することで出力結果が変わる
+
+function moshimo() {
+ if( num1 > 3) {
+  alert(num1 + "は3より大きいね");
+ }
+}
+
+// 以下のコードはhtmlのbody内に記述
+<button type="button" onclick=" moshimo()">ボタン</button>
 ```
 
 
