--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -115,5 +115,6 @@ function moshimo() {
 <button type="button" onclick=" moshimo()">ボタン</button>
 ```
 
+他にも、if~else文やelse if文がある。ここら辺は他のプログラミング言語と同じだね。
 
 
