--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -5,6 +5,7 @@
 * [定数](#定数)
 * [関数](#関数)
 * [if文](#if文)
+* [switch文](#switch文)
 
 ### alert
 
@@ -116,5 +117,9 @@ function moshimo() {
 ```
 
 他にも、if~else文やelse if文がある。ここら辺は他のプログラミング言語と同じだね。
+
+### switch文
+
+書き方はPHPと同じ。
 
 
