--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -6,6 +6,7 @@
 * [関数](#関数)
 * [if文](#if文)
 * [switch文](#switch文)
+* [配列](#配列)
 
 ### alert
 
@@ -121,5 +122,28 @@ function moshimo() {
 ### switch文
 
 書き方はPHPと同じなので説明は割愛。
+
+### 配列
+
+**配列の宣言**
+
+```
+var 配列名 = new Array()
+```
+
+**具体例**
+
+```
+var num1 = new Array("月","火","水");
+
+function day() {
+ alert(num1[0]);
+ alert(num1[1]);
+ alert(num1[2]);
+}
+
+// 以下のコードはhtmlのbody内に記述
+<button type="button" onclick="day()">ボタン</button>
+```
 
 
