--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -7,6 +7,7 @@
 * [if文](#if文)
 * [switch文](#switch文)
 * [配列](#配列)
+* [for文](#for文)
 
 ### alert
 
@@ -147,4 +148,25 @@ function day() {
 <button type="button" onclick="day()">ボタン</button>
 ```
 
+### for文
+
+**具体例**
+
+```
+// 1週間の曜日一覧を表にして出力するプログラム
+var num1 = new Array("曜日一覧","月","火","水","木","金","土","日");
+
+function day() {
+ document.write("<!DOCTYPE html>");
+ document.write("<table border=\"2\">");
+ document.write("<tr><th>" + num1[0] + "</th><tr>");
+ for( var i = 1; i < 8; i++){
+  document.write("<tr><td>" + num1[i] + "</td></tr>");
+ }
+ document.write("</table>");
+}
+
+// 以下のコードはhtmlのbody内に記述
+<button type="button" onclick="day()">ボタン</button>
+```
 
