--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -158,7 +158,7 @@ var num1 = new Array("曜日一覧","月","火","水","木","金","土","日");
 
 function day() {
  document.write("<!DOCTYPE html>");
- document.write("<table border=\"2\">");
+ document.write("<table border=\"2\">"); // 「"2"」を認識させるためエスケープを使用している
  document.write("<tr><th>" + num1[0] + "</th><tr>");
  for( var i = 1; i < 8; i++){
   document.write("<tr><td>" + num1[i] + "</td></tr>");
