--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -170,3 +170,9 @@ function day() {
 <button type="button" onclick="day()">ボタン</button>
 ```
 
+**for文の中でbreakとcontinueを使用できる**
+
+||意味|
+|-|-|
+|break|繰り返し文から抜け出す。|
+|continue|continueより下の処理をスルーして、繰り返し文の先頭に戻る。|
