--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -176,3 +176,20 @@ function day() {
 |-|-|
 |break|繰り返し文から抜け出す。|
 |continue|continueより下の処理をスルーして、繰り返し文の先頭に戻る。|
+
+```
+// 火、水、金だけ表示されるプログラム
+var num1 = new Array("曜日一覧","月","火","水","木","金","土","日");
+
+function day() {
+ document.write("<!DOCTYPE html>");
+ document.write("<table border=\"1\">");
+ document.write("<tr><th>" + num1[0] + "</th><tr>");
+ for( var i = 1; i < 8; i++){
+  if( i == 1 || i == 4) continue;　// ここ
+  if(i == 6) break; // ここ
+  document.write("<tr><td>" + num1[i] + "</td></tr>");
+ }
+ document.write("</table>");
+}
+```
