--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -8,6 +8,7 @@
 * [switch文](#switch文)
 * [配列](#配列)
 * [for文](#for文)
+* [while文](#while文)
 
 ### alert
 
@@ -195,3 +196,7 @@ function day() {
 ```
 
 `||`は「または」の意味。
+
+### while文
+
+書き方はJavaと同じ。
