--- a/JavaScript/基本文法.md
+++ b/JavaScript/基本文法.md
@@ -200,3 +200,21 @@ function day() {
 ### while文
 
 書き方はJavaと同じ。
+
+**具体例**
+
+```
+// うんちを10回表示するプログラム
+var num = 0;
+
+function day() {
+ document.write("<ol>"); // リストタグを使って番号が出るようにした
+ while (num < 10) {
+  document.write("<li>");
+  document.write("ぷゆゆ" + "💩" + "置いとくね" + "<br>");
+  document.write("</li>");
+    num ++;
+}
+ document.write("</ol>");
+}
+```
