--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -16,3 +16,26 @@ confirm("ここに質問文を記述");
 * 確認ダイアログ（ＯＫかキャンセルを選択)を表示。
 * ＯＫならtrue、キャンセルならfalseを返す。
 
+**具体例**
+
+```
+var flg;
+
+function nandemo() {
+ 
+ flg = confirm("背景の色変えてもいいすか？");
+
+  if (flg == true) document.bgColor = "lightyellow";
+}
+
+function reset() {
+ 
+ flg = confirm("背景の色、元に戻してもいいすか？");
+
+  if (flg == true) document.bgColor = "white";
+}
+
+// 以下のコードはhtmlのbody内に記述
+<button type="button" onclick="nandemo()">ボタン</button>
+<button type="button" onclick="reset()">戻す</button>　// 背景の色を元に戻す機能を追加
+```
