--- a/JavaScript/ダイアログ.md
+++ b/JavaScript/ダイアログ.md
@@ -39,3 +39,9 @@ function reset() {
 <button type="button" onclick="nandemo()">ボタン</button>
 <button type="button" onclick="reset()">戻す</button>　// 背景の色を元に戻す機能を追加
 ```
+**上記のコードの解説**
+
+* **flg**
+flgはtrueかfalseの値を格納する時によく使われる変数名。英語のflag(意味:旗)が由来。
+ちなみに、変数名をflg以外の任意の名前に変えても問題なく動く。
+
